--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -31,10 +31,22 @@ dependencies:
     flutter:
         sdk: flutter
     google_sign_in: ^6.2.1
-
+    provider: ^6.1.1
+    flutter_dotenv: ^5.1.0
+    flutter_secure_storage: ^9.0.0
+    shared_preferences: ^2.2.2
+    image_picker: ^1.0.4
+    dio: ^5.4.0
+    firebase_messaging: ^15.0.0
+    firebase_core: ^3.13.0
+    flutter_svg: ^2.0.9
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.8
+    intl: ^0.20.2
+    location: ^7.0.1
+    flutter_local_notifications: 19.1.0
+    flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
     flutter_test:
@@ -45,7 +57,11 @@ dev_dependencies:
     # activated in the `analysis_options.yaml` file located at the root of your
     # package. See that file for information about deactivating specific lint
     # rules and activating additional ones.
-    flutter_lints: ^4.0.0
+    flutter_lints: ^5.0.0
+
+flutter_launcher_icons:
+    android: 'launcher_icon'
+    image_path: 'assets/images/bravacation_icon.jpg'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -54,6 +70,13 @@ dev_dependencies:
 flutter:
     assets:
         - assets/images/test_mission.jpg
+        - assets/images/travel_inducement.png
+        - assets/images/brave_logo.png
+        - assets/images/flat-color-icons_google.svg
+        - assets/images/bravacation_icon.jpg
+        - assets/images/bravacation_logo.png
+        - assets/images/new_trip_start.jpg
+        - assets/config/.env
     # The following line ensures that the Material Icons font is
     # included with your application, so that you can use the icons in
     # the material Icons class.
